# Mapinator

./: .gitignore  README.md  install.sh  install_node.sh
client/public/: config.html
client/public/js/: main-script.js
scripts/: install.sh  setup.sh
www/: ajax.php  config.html  default.css  inc.php  index.php  javascript.js  restart.php  shutdown.php
www/client/public/: config.html  index.html
www/client/public/js/: config-script.js  main-script.js  site-script.js
www/server/: index.js  package.json
www/server/lib/: wifiJoin.js  wifiScan.js  xplanet.js
www/xplanet/: build_xplanet.sh  xplanet_cloud.sh
www/xplanet/sourceData/origin/: cassini
www/xplanet/sourceData/satellites/: iss.tle
www/xplanet/src/xplanet-1.3.0/: AUTHORS  NEWS  README
www/xplanet/src/xplanet-1.3.0/src/: Makefile.in  Map.cpp  PlanetProperties.cpp  createMap.h  drawMultipleBodies.cpp  parse.cpp  setPositions.cpp
www/xplanet/src/xplanet-1.3.0/src/libannotate/: Makefile.am  Symbol.cpp  drawArc.cpp  libannotate.h
www/xplanet/src/xplanet-1.3.0/src/libdisplay/: DisplayMacAqua.h  DisplayOutput.cpp  DisplayX11.cpp  DisplayX11.h  getTimer.cpp
www/xplanet/src/xplanet-1.3.0/src/libephemeris/: EphemerisLow.cpp  ephemerisWrapper.h
www/xplanet/src/xplanet-1.3.0/src/libimage/: WriteImage.cpp
www/xplanet/src/xplanet-1.3.0/src/libmultiple/: drawSphere.cpp  drawSunGlare.cpp
www/xplanet/src/xplanet-1.3.0/src/libplanet/: Makefile.am
www/xplanet/src/xplanet-1.3.0/src/libprojection/: Makefile.am  ProjectionBonne.cpp  ProjectionHemisphere.cpp  ProjectionLambert.cpp  ProjectionLambert.h  ProjectionMercator.cpp  ProjectionTSC.cpp  ProjectionTSC.h
www/xplanet/src/xplanet-1.3.0/xplanet/config/: README  moon_orbit  overlay_clouds
www/xplanet/src/xplanet-1.3.0/xplanet/markers/: earth
xplanet/: build_xplanet.sh  xplanet.conf  xplanet_cloud.sh
xplanet/sourceData/arcs/: README
xplanet/sourceData/config/: default  earth_markers
xplanet/sourceData/markers/: README
xplanet/sourceData/origin/: README
xplanet/src/xplanet-1.3.0/: ChangeLog  Makefile.am  acinclude.m4  configure  xplanet.1
xplanet/src/xplanet-1.3.0/src/: Map.h  Options.cpp  Ring.h  Satellite.cpp  View.cpp  View.h  buildPlanetMap.cpp  findBodyXYZ.cpp  parse.h  printVersion.cpp  readOriginFile.cpp  satrings.h  sphericalToPixel.cpp  sphericalToPixel.h  xpUtil.cpp  xpUtil.h
xplanet/src/xplanet-1.3.0/src/libannotate/: Annotation.h  Makefile.in  arrangeMarkers.cpp  drawArc.h  drawCircle.h
xplanet/src/xplanet-1.3.0/src/libdisplay/: DesktopPicture.m  DisplayBase.cpp  DisplayMacAqua.cpp  DisplayOutput.h  TextRenderer.cpp  TextRenderer.h  Timer.h  TimerMacAqua.cpp  TimerMacAqua.h  getDisplay.cpp  getTextRenderer.cpp
xplanet/src/xplanet-1.3.0/src/libephemeris/: Ephemeris.cpp  Ephemeris.h  EphemerisLow.h  EphemerisSpice.h  Makefile.in  ephemerisWrapper.cpp  jpleph.cpp  pluto.cpp
xplanet/src/xplanet-1.3.0/src/libephemeris/libmoons/: Makefile.in  earth.cpp  elp82b.h  libmoons.h  mars.cpp
xplanet/src/xplanet-1.3.0/src/libimage/: Image.cpp  Image.h  Makefile.am  Makefile.in  ReadImage.cpp  tiff.c
xplanet/src/xplanet-1.3.0/src/libmultiple/: Makefile.am  addOrbits.cpp  drawRings.cpp  libmultiple.h
xplanet/src/xplanet-1.3.0/src/libplanet/: Planet.h
xplanet/src/xplanet-1.3.0/src/libprojection/: ProjectionAncient.cpp  ProjectionBonne.h  ProjectionGnomonic.cpp  ProjectionGnomonic.h  ProjectionIcosagnomonic.cpp  ProjectionMollweide.cpp  ProjectionPeters.cpp  ProjectionPolyconic.h  getProjection.cpp  libprojection.h
xplanet/src/xplanet-1.3.0/src/libsgp4sdp4/: Makefile.am  Makefile.in
xplanet/src/xplanet-1.3.0/xplanet/arcs/: constellations
xplanet/src/xplanet-1.3.0/xplanet/ephemeris/: README
xplanet/src/xplanet-1.3.0/xplanet/images/: README
xplanet/src/xplanet-1.3.0/xplanet/scattering/: earthRayleigh
xplanet/src/xplanet-1.3.0/xplanet/spice/: README  asteroids  asteroids.krn  cassini.krn  mgs.krn  voyager.krn
xplanet/xplanet-1.3.0/: Makefile.in  TODO  config.h.in  configure.ac  xpDefines.h.in
xplanet/xplanet-1.3.0/src/: Makefile.am  Options.h  ParseGeom.c  ParseGeom.h  PlanetProperties.h  Ring.cpp  Satellite.h  Separation.cpp  Separation.h  body.h  buildPlanetMap.h  createMap.cpp  drawProjection.cpp  findBodyXYZ.h  findFile.cpp  findFile.h  keywords.h  parseColor.cpp  parseColor.h  readConfig.cpp  readOriginFile.h  setPositions.h  ssec.cpp  xpGetopt.h  xplanet.cpp
xplanet/xplanet-1.3.0/src/libannotate/: Annotation.cpp  Icon.cpp  Icon.h  LineSegment.cpp  LineSegment.h  Symbol.h  Text.cpp  Text.h  addArcs.cpp  addMarkers.cpp  addSatellites.cpp  addSpiceObjects.cpp  drawCircle.cpp
xplanet/xplanet-1.3.0/src/libdisplay/: DisplayBase.h  DisplayMSWin.cpp  DisplayMSWin.h  Makefile.am  Makefile.in  TextRendererFT2.cpp  TextRendererFT2.h  TextRendererPangoFT2.cpp  TextRendererPangoFT2.h  Timer.cpp  TimerX11.cpp  TimerX11.h  libdisplay.h  libtimer.h
xplanet/xplanet-1.3.0/src/libephemeris/: EphemerisHigh.cpp  EphemerisHigh.h  EphemerisSpice.cpp  Makefile.am  jpl_int.h
xplanet/xplanet-1.3.0/src/libephemeris/libmoons/: Makefile.am  jupiter.cpp  neptune.cpp  pluto.cpp  uranus.cpp
xplanet/xplanet-1.3.0/src/libimage/: bmp.c  jpeg.c  png.c
xplanet/xplanet-1.3.0/src/libmultiple/: Makefile.in  RayleighScattering.cpp  RayleighScattering.h  drawEllipsoid.cpp  drawStars.cpp
xplanet/xplanet-1.3.0/src/libplanet/: Makefile.in  Planet.cpp
xplanet/xplanet-1.3.0/src/libprojection/: Makefile.in  ProjectionAncient.h  ProjectionAzimutEqualArea.cpp  ProjectionAzimutEqualArea.h  ProjectionAzimuthal.cpp  ProjectionAzimuthal.h  ProjectionBase.cpp  ProjectionBase.h  ProjectionHemisphere.h  ProjectionIcosagnomonic.h  ProjectionMercator.h  ProjectionMollweide.h  ProjectionOrthographic.cpp  ProjectionOrthographic.h  ProjectionPeters.h  ProjectionPolyconic.cpp  ProjectionRectangular.cpp  ProjectionRectangular.h
xplanet/xplanet-1.3.0/xplanet/fonts/: README
xplanet/xplanet-1.3.0/xplanet/origin/: galileo
xplanet/xplanet-1.3.0/xplanet/scattering/: README
xplanet/xplanet-1.3.0/xplanet/spice/: cassini  mgs  voyager
(+2 files in other folders)
